--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,18 @@
 <ifmodule mod_deflate.c>
 AddOutputFilterByType DEFLATE text/plain text/html text/xml text/css text/javascript application/octet-stream application/xml application/xhtml+xml application/rss+xml application/javascript application/x-javascript application/x-font-woff application/x-font-otf application/x-font-ttf application/x-font-True application/font application/font-woff application/font-otf application/otf font/otf
 </ifmodule>
+
+# BEGIN EXPIRES
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresDefault "access plus 10 days"
+    ExpiresByType text/css "access plus 1 week"
+    ExpiresByType text/plain "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType application/x-javascript "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 week"
+    ExpiresByType application/x-icon "access plus 1 year"
+</IfModule>
+# END EXPIRES
